fix view bleed with long error message

--- a/src/components/BannerMessage/style.scss
+++ b/src/components/BannerMessage/style.scss
@@ -1,10 +1,10 @@
 .banner-message {
     position: fixed;
     left: 0px;
-    top: -80px;
+    top: -120px;
     width: 100%;
     z-index: 100000;
-    transition: 0.5s ease-in-out;
+    transition: 0.6s ease-in-out;
 
     p {
         display: inline-block;
